# ratatouille

./: .gitignore  LICENSE  Makefile  README.md  collections.yml  poetry_scripts.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python_package.yml
mappings/: unified-mapping.json
ra/cli/: merge_indices.py
ratatouille/: index_merger.py  index_merger_config.py
ratatouille/cli/: __init__.py  merge_indices.py
scripts/: brederode-elastic.json  collections.yml  config.yml  israels-elastic.json  merge-config.yml  merge_brederode_israels.py  merge_collections.py  unified-elastic.json
test/: merge_test.py
