[metadata]
name = huc-ratatouille
version = 0.1.0
description = Multiple Corpus Indexer
long_description = file README.md
author = Hayco de Jong
author_email = hayco.de.jong@di.huc.knaw.nl
url = https://github.com/knaw-huc/ratatouille
license = MIT

classifiers =
    Development Status :: 3 - Alpha
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Other Audience
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
keywords =
    elastic
    indexing

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.13.0
install_requires =
    elasticsearch==8.17.2
    loguru
    requests
    wheel

packages = 
    ratatouille

[options.entry_points]
console_scripts =
    merge-indices = ratatouille.cli.merge_indices:main

[options.exclude_package_data]
* =
    text_info.egg-info
    __pycache__
    .DS_Store
    docs
    tests
